apps/kubevip-ha/k8s.kubevip-svc.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/name: kube-vip-svc
  name: kube-vip-svc
  namespace: kube-system
spec:
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-vip-svc
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kube-vip-svc
    spec:
      containers:
        - args:
            - manager
          image: ghcr.io/kube-vip/kube-vip:v1.2.4
          imagePullPolicy: IfNotPresent
          name: kube-vip
          resources: {}
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
      hostNetwork: true
      serviceAccountName: kube-vip
      tolerations:
        - effect: NoSchedule
          operator: Exists
        - effect: NoExecute
          operator: Exists
  updateStrategy: {}
